[package]
name = "video-reconstruction-from-jumbled-frames"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0"

# --- OpenCV ---
opencv = "0.88"

# --- ONNX Runtime replacement ---
# ort (a pure Rust ONNX Runtime wrapper)
ort = { version = "2.0.0-rc.7", features = ["ndarray", "load-dynamic"] }

# --- Math / image utilities ---
ndarray = { version = "0.15", features = ["rayon"] }
image = "0.25"

# --- Traveling Salesman solver ---
elkai-rs = "0.1.7"

# --- Parallelization ---
rayon = "1.10"

# --- Progress bars ---
tqdm = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
